--- a/src/app/views/movie/movie.component.html
+++ b/src/app/views/movie/movie.component.html
@@ -1,7 +1,7 @@
 <div style="border: solid 2px; margin-bottom: 40px">
   <h1 style="cursor: pointer;" (click)="viewDetails(movie.id)">title: {{movie.title}}</h1>
   <br/>
-  Image: {{movie.image}}
+  <img src="{{movie.image}}" alt="" height="300px">
   <br/>
   Year: {{movie.year}}
   <br/>
